文章评论完结

--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,11 @@
 # .env.development 本地环境
 
 # 跨域相关配置
-CORS_ORIGIN = 'http://localhost:8080'
+# CORS_ORIGIN = 'http://localhost:8080'
+CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
-CORS_CREDENTIALS = "true"
+CORS_CREDENTIALS = true
 
 # 数据库相关配置
 SQL_TYPE = "mysql"
@@ -13,3 +14,14 @@ SQL_HOST = "localhost"
 SQL_USERNAME = "root"
 SQL_PASSWORD = "root1234"
 SQL_DATABASE = "ayang-personal-blog"
+
+# minio配置
+MINIO_ENDPOINT = 10.4.32.45
+MINIO_PORT = 9000
+MINIO_ACCESS_KEY = 58UJNgOdPKc4m1lTi9Rs
+MINIO_SECRET_KEY = Uq648v9RxQfxXB5E3AKCqZan9fOcUoI4B4gpMQJL
+
+# redis配置
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+REDIS_PASSWORD = redis_root
