--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
 # .env.development 本地环境
 
 # 跨域相关配置
-CORS_ORIGIN = 'http://localhost:8080'
+# CORS_ORIGIN = 'http://localhost:8080'
+CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
