--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 
 # 跨域相关配置
 # CORS_ORIGIN = 'http://localhost:8080'
-CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080']
+CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080/']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
