--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,7 @@
 # .env.development 本地环境
 
 # 跨域相关配置
-# CORS_ORIGIN = 'http://localhost:8080'
-CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080/']
+CORS_ORIGIN = ['https://ay-blog.vercel.app']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
