--- a/.env.development
+++ b/.env.development
@@ -1,20 +1,25 @@
 # .env.development 本地环境
 
-# 跨域相关配置
-CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080']
+# 运行配置
+PORT = 3000
+HOST = 10.4.32.45
+
+# cors配置
+CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080', 'http://localhost:1088']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
 
-# 数据库相关配置
-SQL_TYPE = "mysql"
+# sql配置
+SQL_TYPE = mysql
 SQL_PORT = 3306
-SQL_HOST = "localhost"
-SQL_USERNAME = "root"
-SQL_PASSWORD = "root1234"
-SQL_DATABASE = "ayang-personal-blog"
+SQL_HOST = localhost
+SQL_USERNAME = root
+SQL_PASSWORD = root1234
+SQL_DATABASE = ayang-personal-blog
 
 # minio配置
+MINIO_BASE_URL = http://10.4.32.45:9000
 MINIO_ENDPOINT = 10.4.32.45
 MINIO_PORT = 9000
 MINIO_ACCESS_KEY = 58UJNgOdPKc4m1lTi9Rs
