--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,8 @@
-# .env.development 本地环境
+# .env.production 本地环境
+
+# 运行配置
+PORT = 3000
+HOST = 10.4.32.45
 
 # 跨域相关配置
 CORS_ORIGIN = ['https://ay-blog.vercel.app']
@@ -7,20 +11,21 @@ CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
 
 # 数据库相关配置
-SQL_TYPE = "mysql"
+SQL_TYPE = mysql
 SQL_PORT = 3306
-SQL_HOST = "localhost"
-SQL_USERNAME = "root"
-SQL_PASSWORD = "root1234"
-SQL_DATABASE = "ayang-personal-blog"
+SQL_HOST = mysql-container
+SQL_USERNAME = root
+SQL_PASSWORD = root1234
+SQL_DATABASE = ayang-personal-blog
 
 # minio配置
+MINIO_BASE_URL = http://10.4.32.45:9000
 MINIO_ENDPOINT = 10.4.32.45
 MINIO_PORT = 9000
 MINIO_ACCESS_KEY = 58UJNgOdPKc4m1lTi9Rs
 MINIO_SECRET_KEY = Uq648v9RxQfxXB5E3AKCqZan9fOcUoI4B4gpMQJL
 
 # redis配置
-REDIS_HOST = localhost
+REDIS_HOST = redis-container
 REDIS_PORT = 6379
 REDIS_PASSWORD = redis_root
