--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ PORT = 3000
 HOST = 10.4.32.45
 
 # cors配置
-CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080', 'http://localhost:1088']
+CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080','http://localhost:1088']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
@@ -29,3 +29,6 @@ MINIO_SECRET_KEY = Uq648v9RxQfxXB5E3AKCqZan9fOcUoI4B4gpMQJL
 REDIS_HOST = localhost
 REDIS_PORT = 6379
 REDIS_PASSWORD = redis_root
+
+# 百度-服务端基础服务-AK
+BAIDU_SERVER_AK = 7MUgLX7BHl9uynG5K99ZHQCwR6KEwFJr
