--- a/.env.development
+++ b/.env.development
@@ -5,12 +5,12 @@ PORT = 3000
 HOST = 10.4.32.45
 
 # cors配置
-CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','http://127.0.0.1:8080','http://localhost:1088']
+CORS_ORIGIN = ['http://localhost:8080','http://10.4.32.45:8080','https://ay-blog-client.vercel.app']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
 
-# sql配置
+# mysql配置
 SQL_TYPE = mysql
 SQL_PORT = 3306
 SQL_HOST = localhost
