--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,16 @@
-# .env.production 本地环境
+# .env.production 生成环境
 
 # 运行配置
 PORT = 3000
 HOST = 10.4.32.45
 
-# 跨域相关配置
-CORS_ORIGIN = ['https://ay-blog.vercel.app']
+# cors配置
+CORS_ORIGIN = ['https://ay-blog-client.vercel.app']
 CORS_METHODS = 'GET,HEAD,PUT,PATCH,POST,DELETE'
 CORS_HEADERS = 'Content-Type,Authorization'
 CORS_CREDENTIALS = true
 
-# 数据库相关配置
+# mysql配置
 SQL_TYPE = mysql
 SQL_PORT = 3306
 SQL_HOST = mysql-container
