feat: 更新package.json和redis服务文件
在package.json中移除了旧的开发启动脚本，并添加了class-validator依赖。在redis.service.ts中修正了Visitor实体的导入路径，确保与模块结构一致。

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "build": "nest build",
     "start": "cross-env NODE_ENV=development nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:dev": "ts-node scripts/start-all.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/src/main",
@@ -32,6 +31,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@webundsoehne/nest-fastify-file-upload": "^2.2.0",
     "axios": "^1.7.9",
+    "class-validator": "^0.14.2",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
