feat: 更新vercel.json配置，添加重写规则和构建命令
在vercel.json中添加了重写规则，将API请求重定向到新的restful.js文件，同时更新了构建命令和输出目录配置，以优化部署流程。

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,22 @@
 {
-  "version": 2,
-  "builds": [
+    "version": 2,
+    "public": false,
+    "builds": [
       {
-          "src": "dist/src/main.js",
-          "use": "@vercel/node"
+        "src": "dist/src/main.js",
+        "use": "@vercel/node"
       }
-  ],
-  "routes": [
+    ],
+    "rewrites": [
       {
-          "src": "/(.*)",
-          "dest": "dist/src/main.js"
+        "source": "/api/(.*)",
+        "destination": "/api/restful.js"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/"
       }
-  ]
-}
+    ],
+    "buildCommand": "cnpm install && npm run build",
+    "outputDirectory": "dist"
+  }
