feat: 更新环境配置和构建脚本
在`.env.production`中更新了数据库和Redis的连接信息，确保与新环境兼容。同时，修改了`package.json`中的开发启动脚本以支持热重载，优化了开发体验。此外，更新了`vercel.json`中的构建配置和路由规则，以提升部署效率和灵活性。

--- a/.env.production
+++ b/.env.production
@@ -13,10 +13,10 @@ CORS_CREDENTIALS = true
 # mysql配置
 SQL_TYPE = mysql
 SQL_PORT = 3306
-SQL_HOST = mysql-container
-SQL_USERNAME = root
-SQL_PASSWORD = root1234
-SQL_DATABASE = ayang-personal-blog
+SQL_HOST = sql12.freesqldatabase.com
+SQL_USERNAME = sql12786521
+SQL_PASSWORD = lDDuWpiKfd
+SQL_DATABASE = sql12786521
 
 # minio配置
 MINIO_BASE_URL = http://10.4.32.45:9000
@@ -26,9 +26,9 @@ MINIO_ACCESS_KEY = 58UJNgOdPKc4m1lTi9Rs
 MINIO_SECRET_KEY = Uq648v9RxQfxXB5E3AKCqZan9fOcUoI4B4gpMQJL
 
 # redis配置
-REDIS_HOST = redis-container
-REDIS_PORT = 6379
-REDIS_PASSWORD = redis_root
+REDIS_HOST = redis-16301.c1.ap-southeast-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT = 16301
+REDIS_PASSWORD = nUZBpY1GTlPkHpAdzDfhh4YBz6wWxNbH
 
 # 百度-服务端基础服务-AK
 BAIDU_SERVER_AK = 7MUgLX7BHl9uynG5K99ZHQCwR6KEwFJr
