--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,29 @@
 {
     "version": 2,
-    "public": false,
     "builds": [
       {
-        "src": "dist/src/main.js",
-        "use": "@vercel/node"
+        "src": "src/main.ts",
+        "use": "@vercel/node",
+        "config": {
+          "installCommand": "npm config set registry https://registry.npmmirror.com && npm install --legacy-peer-deps",
+          "buildCommand": "npm run build"
+        }
       }
     ],
-    "rewrites": [
+    "routes": [
       {
-        "source": "/api/(.*)",
-        "destination": "/api/restful.js"
-      },
-      {
-        "source": "/(.*)",
-        "destination": "/"
+        "src": "/(.*)",
+        "dest": "src/main.ts",
+        "methods": [
+          "GET",
+          "POST",
+          "PUT",
+          "DELETE",
+          "PATCH"
+        ]
       }
     ],
-    "buildCommand": "cnpm install && npm run build",
-    "outputDirectory": "dist"
+    "env": {
+      "NODE_ENV": "production"
+    }
   }
