feat: 更新vercel.json中的安装命令
将vercel.json中的安装命令从使用npm更改为使用cnpm，以优化依赖安装过程，提升部署效率。

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "src": "src/main.ts",
         "use": "@vercel/node",
         "config": {
-          "installCommand": "npm config set registry https://registry.npmmirror.com && npm install --legacy-peer-deps",
+          "installCommand": "cnpm install",
           "buildCommand": "npm run build"
         }
       }
